Refatoração de métodos de AnuncioServiceImpl e otimização da lógica de validação e excessões